--- a/src/index.css
+++ b/src/index.css
@@ -42,17 +42,18 @@ a:hover {
 
 body {
   margin: 0;
+  padding: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
+  place-items: center;  
   min-height: 100vh;
    background-color: antiquewhite;
-   background-image: url('../src/assets/image4.jpg'); /* Replace with your image path */
+   background-image: url('../src/assets/image1.jpg'); /* Replace with your image path */
   background-size: cover; /* Ensures the image covers the entire background */
   background-repeat: no-repeat; /* Prevents tiling of the image */
   background-attachment: fixed; /* Makes the image stay fixed during scrolling */
   background-position: center; /* Centers the image */
 }
+
 
 h1 {
   font-size: 3.2em;
