--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,9 @@
 @tailwind utilities;
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  font-family: poppins, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 2;
+  font-weight: 300;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -49,7 +49,7 @@ body {
   align-items: center;
   justify-content: center;
   box-sizing: border-box;
-  background-color: antiquewhite;
+  background-color: rgb(49, 48, 45);
   background-image: url('../src/assets/image1.jpg'); 
   background-size: cover;
   background-repeat: no-repeat;
