--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  font-family: poppins, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Wasted Vindey, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 2;
   font-weight: 300;
 
@@ -120,19 +120,33 @@ button:focus-visible {
   width: 100%;
   height: 2px;
   background-color: var(--button-color);
-  transform: scaleX(0);
   transform-origin: left;
-  animation: slideIn 0.4s ease-in-out forwards;
+  animation: loadingLine 1s ease-in-out forwards;
 }
 
-@keyframes slideIn {
-  from {
+@keyframes loadingLine {
+  0% {
     transform: scaleX(0);
+    left: 0;
   }
-  to {
+  25% {
+    transform: scaleX(0.5);
+    left: 25%;
+  }
+  50% {
+    transform: scaleX(0.3);
+    left: 50%;
+  }
+  75% {
+    transform: scaleX(0.8);
+    left: 10%;
+  }
+  100% {
     transform: scaleX(1);
+    left: 0;
   }
 }
+
 
 /* Ensure iframe is responsive & seamless */
 .iframe-container {
